apps/maybe/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maybe
  namespace: maybe
  labels:
    app.kubernetes.io/name: maybe
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: maybe
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: maybe
    spec:
      containers:
        - name: web
          image: "ghcr.io/maybe-finance/maybe:latest"
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          volumeMounts:
            - mountPath: /rails/storage
              name: storage
        - name: worker
          image: "ghcr.io/maybe-finance/maybe:latest"
          command: ["bundle", "exec", "sidekiq"]
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: maybe-app-storage
