apps/maybe/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: maybe
  namespace: maybe
  labels:
    app.kubernetes.io/name: maybe
  annotations:
    gethomepage.dev/name: maybe
    gethomepage.dev/description: Finances
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Tools
    gethomepage.dev/icon: maybe.png
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=maybe"
spec:
  tls:
    - hosts:
        - maybe.totorinho.duckdns.org
      secretName: duckdns-wildcard-cert-totorinho.duckdns.org
  rules:
    - host: maybe.totorinho.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: maybe
                port:
                  number: 3000
